# lazystuff

./: .gitignore  .vulture-whitelist  Makefile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  run-checks.yml  run-tests.yml
doc/: conf.py  index.rst
lazy/: __init__.py  lazylist.py
lazystuff/: __init__.py  lazylist.py
tests/: test_add.py  test_add_tail.py  test_advance_tail.py  test_append.py  test_bool.py  test_clear.py  test_cmp.py  test_contains.py  test_copy.py  test_count.py  test_delitem.py  test_eq_ne.py  test_extend.py  test_format.py  test_ge.py  test_getitem.py  test_gt.py  test_hash.py  test_iadd.py  test_imul.py  test_index.py  test_init.py  test_insert.py  test_is_strict.py  test_iter.py  test_iterator.py  test_le.py  test_len.py  test_lt.py  test_make_strict.py  test_mul.py  test_pop.py  test_reduce.py  test_remove.py  test_repr.py  test_reverse.py  test_rmul.py  test_setitem.py  test_sort.py  test_str.py
tests/lazydict/: test_lazydict_delitem.py  test_lazydict_getitem.py  test_lazydict_init.py  test_lazydict_iter.py  test_lazydict_setitem.py
