[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main"]

[project]
name = "lazystuff"
version = "0.1.0"
authors = [{ name = "David Byers", email = "david.byers@liu.se"}]
description = "Simplify cli tools with subcommands"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["lazy", "sequence"]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Typing :: Untyped"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "Flake8-pyproject",
    "build",
    "flake8",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "vulture",
    "wheel",
]



[project.urls]


[tool.setuptools]
packages = ["lazystuff"]


[tool.flake8]
max-line-length = 131


[tool.pydocstyle]
add_ignore = "D105"


[tool.pytest.ini_options]
addopts = [
    "--tb", "short",
    "--cov", "lazystuff",
    "--cov-branch",
    "--cov-report", "term-missing",
    "--cov-config", ".coveragerc",
]
testpaths = [
    "tests"
]


[tool.mypy]
files = "lazystuff"
strict = true
strict_equality = false
extra_checks = true
no_implicit_reexport = true
no_error_summary = true


[tool.pylint.main]
ignore = [".git"]
ignore-patterns = ["^\\.#"]
jobs = 0
enable-all-extensions = true

[tool.pylint.format]
max-line-length = 131
max-module-lines = 2000


[tool.pylint."messages control"]
enable = [
    "useless-suppression"
]

[tool.pylint.reports]
output-format = "parseable"
reports = false
score = false
